--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
-    <title>Vite + React</title>
+    <title>Yogesh Shekhawat</title>
   </head>
-  <body>
+  <body className=" antialiased bg-white ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
